--- a/SabaCenter/Base.lproj/Main.storyboard
+++ b/SabaCenter/Base.lproj/Main.storyboard
@@ -41,10 +41,19 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="REm-Fi-LUC">
+                                <rect key="frame" x="157" y="352" width="61" height="30"/>
+                                <state key="normal" title="Navigate"/>
+                                <connections>
+                                    <action selector="navigateButtonTapped:" destination="JEX-9P-axG" eventType="touchUpInside" id="nHm-57-cU6"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="REm-Fi-LUC" firstAttribute="centerX" secondItem="VUw-jc-0yf" secondAttribute="centerX" id="6Co-9Q-KrY"/>
                             <constraint firstItem="0XM-y9-sOw" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leading" constant="20" symbolic="YES" id="Tsc-yG-G1q"/>
+                            <constraint firstItem="REm-Fi-LUC" firstAttribute="top" secondItem="0XM-y9-sOw" secondAttribute="bottom" constant="8" id="a1f-J0-GzI"/>
                             <constraint firstItem="0XM-y9-sOw" firstAttribute="centerY" secondItem="svH-Pt-448" secondAttribute="centerY" id="jWN-iV-94e"/>
                             <constraint firstAttribute="trailing" secondItem="0XM-y9-sOw" secondAttribute="trailing" constant="20" symbolic="YES" id="tHV-ZD-HQj"/>
                         </constraints>
@@ -163,6 +172,44 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XrE-3k-pPH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1700" y="29"/>
+        </scene>
+        <!--Placeholder View Controller-->
+        <scene sceneID="iao-4T-bVp">
+            <objects>
+                <viewController id="p5K-HZ-gXw" userLabel="Placeholder View Controller" customClass="NavigateTestViewController" customModule="SabaCenter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bvt-9t-kX9">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Navigation completed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ld-LO-1g7">
+                                <rect key="frame" x="103.5" y="355" width="168" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Parameter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IO6-mj-uAF">
+                                <rect key="frame" x="148" y="384" width="79" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="7ld-LO-1g7" firstAttribute="centerX" secondItem="o6S-Vs-PYT" secondAttribute="centerX" id="W1K-MA-4Up"/>
+                            <constraint firstItem="7ld-LO-1g7" firstAttribute="centerY" secondItem="o6S-Vs-PYT" secondAttribute="centerY" id="bBI-c1-cl3"/>
+                            <constraint firstItem="IO6-mj-uAF" firstAttribute="top" secondItem="7ld-LO-1g7" secondAttribute="bottom" constant="8" id="ea1-fQ-HHc"/>
+                            <constraint firstItem="IO6-mj-uAF" firstAttribute="centerX" secondItem="o6S-Vs-PYT" secondAttribute="centerX" id="muJ-LV-cq8"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="o6S-Vs-PYT"/>
+                    </view>
+                    <connections>
+                        <outlet property="parameterLabel" destination="IO6-mj-uAF" id="h5A-ab-VWx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VBU-De-zIL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="708" y="878"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="HAg-gn-oI1">
@@ -573,16 +620,17 @@
             </objects>
             <point key="canvasLocation" x="3658" y="-642"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Navigation Controller Base-->
         <scene sceneID="r7l-gg-dq7">
             <objects>
-                <navigationController id="vC3-pB-5Vb" sceneMemberID="viewController">
+                <navigationController id="vC3-pB-5Vb" customClass="UINavigationControllerBase" customModule="Framework" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="DjV-YW-jjY">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
                         <segue destination="JEX-9P-axG" kind="relationship" relationship="rootViewController" id="GKi-kA-LjT"/>
+                        <segue destination="p5K-HZ-gXw" kind="show" identifier="placeholderSegue" id="9Vd-UE-cjE"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SLD-UC-DBI" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -591,6 +639,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="6S0-TO-JiA"/>
+        <segue reference="Tll-UG-LXB"/>
     </inferredMetricsTieBreakers>
 </document>
